@@ -1,3 +1,4 @@
+- Provide a template for bug reports, containing standardized information on the RKWard setup in Help->Report Bug...
 - When loading a (local) workspace, change the working directory to the directory of the workspace (configurable)
 - Include the sidebar position of tool windows when saving / restoring the workplace layout
 - "Pending jobs" tool window is not longer shown in the bottom sidebar by default
